Create basic logout functionality

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
     <title>Home Page</title>
 </head>
 <body>
+    {% include 'navbar.html' %}
     <p1>Welcome to whatever this is!</p1>
     <p>Easy Peasy</p>
 </body>
