--- a/templates/search.html
+++ b/templates/search.html
@@ -25,9 +25,7 @@
                     <th>Hostname</th>
                     <th>Asset Type</th>
                     <th>Status</th>
-                    {% if results[0].customers%}
                     <th>Customer</th>
-                    {% endif %}
                 </tr>
             </thead>
             <tbody>
@@ -36,9 +34,7 @@
                     <td>{{ asset.hostname }}</td>
                     <td>{{ asset.device_types.name }}</td>
                     <td>{{ asset.statuses.value }}</td>
-                    {% if asset.customers %}
                     <td>{{ asset.customers.customer_name }}</td>
-                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
@@ -47,7 +43,41 @@
         <p>No results found.</p>
         {% endif %}
 {% else %}
-    <p>To be done</p>
+    <div id="page">
+    <div id="header">
+        <h1>Search Assets</h1>
+        <p>Here you can search for your assets.</p>
+    </div>
+    <div id="content">
+        <form method="POST" action="/search">
+            <input type="text" name="hostname" placeholder="Hostname">
+            <input type="text" name="type_id" placeholder="Asset Type">
+            <input type="text" name="status_id" placeholder="Status">
+            <button type="submit">Search</button>
+        </form>
+        {% if results %}
+        <h2>Search Results:</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Hostname</th>
+                    <th>Asset Type</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for asset in results %}
+                <tr>
+                    <td>{{ asset.hostname }}</td>
+                    <td>{{ asset.device_types.name }}</td>
+                    <td>{{ asset.statuses.value }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        <p>No results found.</p>
+        {% endif %}
 {% endif %}
     </div>
 </html>
