Create basic creation functionality

--- a/templates/create.html
+++ b/templates/create.html
@@ -28,6 +28,13 @@
                 <option value="{{ status.id }}">{{ status.value }}</option>
                 {% endfor %}
             </select>
+
+             <label for="customer_id">Customer</label>
+            <select id="customer_id" name="customer_id" required>
+                {% for customer in customers %}
+                <option value="{{ customer.id }}">{{ customer.customer_name }}</option>
+                {% endfor %}
+            </select>
             <button type="submit">Create Asset</button>
         </form>
     </div>
