Create basic customer update functionality.

--- a/templates/customers.html
+++ b/templates/customers.html
@@ -6,7 +6,7 @@
 <div id="page">
     <div id="header">
         <h1>Search Customers</h1>
-        <p>Here you can search for assets across all customers. Or leave both fields blank to return all.</p>
+        <p>Here you can search for customers by fields. Or leave both fields blank to return all.</p>
     </div>
     <div id="content">
         <form method="POST" action="/customers">
