--- a/templates/assets.html
+++ b/templates/assets.html
@@ -29,7 +29,11 @@
             <tbody>
                 {% for asset in assets %}
                 <tr>
+                    {% if session['auth_level'] == 1 or session['auth_level'] == 2 %}
                     <td><a href="/assets/{{ asset.id }}">{{ asset.hostname }}</a></td>
+                    {% else %}
+                    <td>{{ asset.hostname }}</td>
+                    {% endif %}
                     <td>{{ asset.device_types.name }}</td>
                     <td>{{ asset.statuses.value }}</td>
                     {% if asset.customers %}
