--- a/templates/search.html
+++ b/templates/search.html
@@ -31,7 +31,7 @@
             <tbody>
                 {% for asset in results %}
                 <tr>
-                    <td>{{ asset.hostname }}</td>
+                    <td><a href="/assets/{{asset.id}}">{{ asset.hostname }}</a></td>
                     <td>{{ asset.device_types.name }}</td>
                     <td>{{ asset.statuses.value }}</td>
                     <td>{{ asset.customers.customer_name }}</td>
