--- a/templates/single_asset.html
+++ b/templates/single_asset.html
@@ -1,3 +1,15 @@
+<script>
+    function showDeletePopup() {
+        document.getElementById('delete-popup').style.display = 'block';
+
+    }
+
+    function hideDeletePopup() {
+        document.getElementById('delete-popup').style.display = 'none';
+
+    }
+</script>
+
 <html>
 <head>
     <title>Asset {{ asset.hostname }}</title>
@@ -5,8 +17,9 @@
 <body>
     {% include 'navbar.html' %}
     <div id="page">
+        <div id="form-container">
         <h3>View or Edit Asset Details</h3>
-        <form id="asset-container" method="POST" action="/assets/{{asset.id}}">
+        <form id="asset-form" method="POST" action="/assets/{{asset.id}}">
             <input type="text" name="hostname" placeholder="{{ asset.hostname }}">
             <label for="type_id">Asset Type:</label>
             <select id="type_id" name="type_id" selected="{{asset.type_id}}"required>
@@ -40,6 +53,19 @@
             </select>
             <button type="submit">Update</button>
         </form>
+        </div>
+        <div id="delete-button-container">
+            <button onclick="showDeletePopup()">Delete</button>
+        </div>
+        <div id="delete-popup">
+            <button onClick="hideDeletePopup()">Close</button>
+            <h4>Are you sure you wish to delete?</h4>
+            <form id="asset-delete-form" method="POST" action="/assets/{{asset.id}}/delete">
+                <label for="verify">Check To verfy:</label>
+                <input type="checkbox" name="verify" required>
+                <button type="submit">Delete</button>
+            </form>
+        </div>
     </div>
 </body>
 
@@ -48,6 +74,17 @@
     input::placeholder {
         opacity: 1;
         color: black
+    }
+
+    #delete-popup {
+        display: none;
+        position: fixed;
+        border: 1pt black;
+        background-color: grey;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
     }
 
 </style>
