--- a/templates/single_customer.html
+++ b/templates/single_customer.html
@@ -1,3 +1,15 @@
+<script>
+    function showDeletePopup() {
+        document.getElementById('delete-popup').style.display = 'block';
+
+    }
+
+    function hideDeletePopup() {
+        document.getElementById('delete-popup').style.display = 'none';
+
+    }
+</script>
+
 <html>
 <head>
     <title>Customer {{ customer.id }}</title>
@@ -6,6 +18,7 @@
     {% include 'navbar.html' %}
         <div id="page">
         <h3>{{customer.customer_name}}</h3>
+        <div id="form-container"></div>
         <form id="customer-container" method="POST" action="/customers/{{customer.id}}">
             <input type="text" name="customer_name" placeholder="{{ customer.customer_name }}">
             <label for="teir">Teir:</label>
@@ -13,6 +26,19 @@
             </select>
             <button type="submit">Update</button>
         </form>
+        </div>
+         <div id="delete-button-container">
+            <button onclick="showDeletePopup()">Delete</button>
+        </div>
+        <div id="delete-popup">
+            <button onClick="hideDeletePopup()">Close</button>
+            <h4>Are you sure you wish to delete?</h4>
+            <form id="asset-delete-form" method="POST" action="/customers/{{customer.id}}/delete">
+                <label for="verify">Check To verfy:</label>
+                <input type="checkbox" name="verify" required>
+                <button type="submit">Delete</button>
+            </form>
+        </div>
     </div>
 </body>
 
@@ -21,6 +47,16 @@
     input::placeholder {
         opacity: 1;
         color: black
+    }
+
+#delete-popup {
+        display: none;
+        position: fixed;
+        border: 1pt black;
+        background-color: grey;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
 </style>
