--- a/templates/user_management.html
+++ b/templates/user_management.html
@@ -30,7 +30,7 @@
             <tbody>
                 {% for user in users %}
                 <tr>
-                    <td><a href="/user/{{ user.id }}">{{ user.id }}</a></td>
+                    <td><a href="/users/{{ user.id }}">{{ user.id }}</a></td>
                     <td>{{ user.username }}</td>
                     <td>{{ user.customers.customer_name }}</td>
                     <td>{{user.auth_level}}</td>
