--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,17 @@
-{% if session['auth_level'] == 1%}
+<script>
+    function showLogoutPopup() {
+        document.getElementById('logout-popup').style.display = 'block';
+
+    }
+
+    function hideLogoutPopup() {
+        document.getElementById('logout-popup').style.display = 'none';
+
+    }
+
+</script>
+
+{% if session['auth_level'] == 1 %}
 <nav>
     <a href="/">Home</a>
     <a href="/assets">View All Assets</a>
@@ -6,8 +19,13 @@
     <a href="/customers">View Customers</a>
     <a href="/create">Create new record</a>
     <a href="/users">User Management</a>
-    <a href="/logout" method="post">Logout</a>
+    <button onclick="showLogoutPopup()">Logout</button>
 </nav>
+<div id="logout-popup">
+    <button onClick="hideLogoutPopup()">Close</button>
+    <h4>Are you sure you want to logout</p>
+    <a href="/logout"><button>Logout</button></a>
+</div>
 
 <style>
     nav {
@@ -25,6 +43,17 @@
         width: calc(100/7);
         text-align: center;
     }
+
+    #logout-popup{
+        display: none;
+        position: absolute;
+        border: 1pt black;
+        background-color: grey;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
 </style>
 {% elif session['auth_level'] == 2 %}
 <nav>
@@ -33,8 +62,13 @@
     <a href="/search">Search Assets</a>
     <a href="/customers">View Customers</a>
     <a href="/create">Create new record</a>
-    <a href="/logout" method="post">Logout</a>
+    <button onclick="showLogoutPopup()">Logout</button>
 </nav>
+<div id="logout-popup">
+    <button onClick="hideLogoutPopup()">Close</button>
+    <h4>Are you sure you want to logout</p>
+    <a href="/logout"><button>Logout</button></a>
+</div>
 
 <style>
     nav {
@@ -52,6 +86,18 @@
         width: calc(100/6);
         text-align: center;
     }
+
+    
+    #logout-popup{
+        display: none;
+        position: absolute;
+        border: 1pt black;
+        background-color: grey;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
 </style>
 {% else %}
 <nav>
@@ -59,8 +105,13 @@
     <a href="/assets">View All Assets</a>
     <a href="/search">Search Assets</a>
     <a href="/contact">Contact</a>
-    <a href="/logout" method="post">Logout</a>
+    <button onclick="showLogoutPopup()">Logout</button>
 </nav>
+<div id="logout-popup">
+    <button onClick="hideLogoutPopup()">Close</button>
+    <h4>Are you sure you want to logout</p>
+    <a href="/logout"><button>Logout</button></a>
+</div>
 
 <style>
     nav {
@@ -77,6 +128,16 @@
     nav > a {
         width: 20%;
         text-align: center;
+    }
+
+      #logout-popup{
+        display: none;
+        position: absolute;
+        border: 1pt black;
+        background-color: grey;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 </style>
 {% endif %}
