--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -14,7 +14,7 @@
                     <label for="username">Username:</label>
                     <input type="email" id="username" name="username" required>
                     <label for="password">Password</label>
-                    <input type="text" id="password" name="password" required>
+                    <input type="password" id="password" name="password" required>
                     <label for="customer_id">Customer</label>
                     <select id="customer_id" name="customer_id" required>
                         {% for customer in customers %}
