--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     </div>
     <div class=flex-container>
         <label for=username>Password: </label>
-        <input type=text id=password name=password>
+        <input type=password id=password name=password>
     </div>
     <div class=flex-container>
         <button type=submit form="login-form" value="Submit">Login</button>
