--- a/templates/customers.html
+++ b/templates/customers.html
@@ -11,7 +11,7 @@
     <div id="content">
         <form method="POST" action="/customers">
             <input type="text" name="customer_name" placeholder="Customer Name">
-            <input type="text" name="teir" placeholder="Customer Tier">
+            <input type="number" name="teir" placeholder="Customer Tier">
             <button type="submit">Search</button>
         </form>
         {% if results %}
