--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,54 +14,10 @@
 {% if session['auth_level'] == 1 %}
 <nav>
     <a href="/">Home</a>
-    <a href="/assets">View All Assets</a>
-    <a href="/search">Search Assets</a>
+    <a href="/assets">View/Search All Assets</a>
     <a href="/customers">View Customers</a>
     <a href="/create">Create new record</a>
     <a href="/users">User Management</a>
-    <button onclick="showLogoutPopup()">Logout</button>
-</nav>
-<div id="logout-popup">
-    <button onClick="hideLogoutPopup()">Close</button>
-    <h4>Are you sure you want to logout</p>
-    <a href="/logout"><button>Logout</button></a>
-</div>
-
-<style>
-    nav {
-        width:100%;
-        height:50px;
-        background-color: orange;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        
-    }
-    
-    nav > a {
-        width: calc(100/7);
-        text-align: center;
-    }
-
-    #logout-popup{
-        display: none;
-        position: absolute;
-        border: 1pt black;
-        background-color: grey;
-        top:50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    
-</style>
-{% elif session['auth_level'] == 2 %}
-<nav>
-    <a href="/">Home</a>
-    <a href="/assets">View All Assets</a>
-    <a href="/search">Search Assets</a>
-    <a href="/customers">View Customers</a>
-    <a href="/create">Create new record</a>
     <button onclick="showLogoutPopup()">Logout</button>
 </nav>
 <div id="logout-popup">
@@ -87,6 +43,48 @@
         text-align: center;
     }
 
+    #logout-popup{
+        display: none;
+        position: absolute;
+        border: 1pt black;
+        background-color: grey;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+</style>
+{% elif session['auth_level'] == 2 %}
+<nav>
+    <a href="/">Home</a>
+    <a href="/assets">View/Search All Assets</a>
+    <a href="/customers">View Customers</a>
+    <a href="/create">Create new record</a>
+    <button onclick="showLogoutPopup()">Logout</button>
+</nav>
+<div id="logout-popup">
+    <button onClick="hideLogoutPopup()">Close</button>
+    <h4>Are you sure you want to logout</p>
+    <a href="/logout"><button>Logout</button></a>
+</div>
+
+<style>
+    nav {
+        width:100%;
+        height:50px;
+        background-color: orange;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        
+    }
+    
+    nav > a {
+        width: calc(100/5);
+        text-align: center;
+    }
+
     
     #logout-popup{
         display: none;
@@ -102,8 +100,7 @@
 {% else %}
 <nav>
     <a href="/">Home</a>
-    <a href="/assets">View All Assets</a>
-    <a href="/search">Search Assets</a>
+    <a href="/assets">View/Search All Assets</a>
     <a href="/contact">Contact</a>
     <button onclick="showLogoutPopup()">Logout</button>
 </nav>
@@ -126,8 +123,8 @@
     }
     
     nav > a {
-        width: 20%;
         text-align: center;
+        width: calc(100/4);
     }
 
       #logout-popup{
